--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 Entries are sorted chronologically from oldest to youngest within each release,
 releases are sorted from youngest to oldest.
 
+version <next>:
+- WHEP demuxer
+
+
 version 6.1.1
 - avcodec/mpegvideo_enc: Dont copy beyond the image
 - avfilter/vf_minterpolate: Check pts before division
